Remove hover effect from player name in playbyplay styles to simplify layout and prevent overflow issues.

--- a/front/src/components/Play/Player/Player.scss
+++ b/front/src/components/Play/Player/Player.scss
@@ -7,9 +7,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
 
-    &:hover {
-      overflow: visible;
-    }
+    // &:hover {
+    //   overflow: visible;
+    //   white-space: wrap;
+    // }
   }
 
   .line {
